# M2E-smart-contracts

./: Cargo.toml  README.md
contracts/flan/: Cargo.toml
contracts/ft1/: Cargo.toml  build.sh
contracts/ft1/src/: lib.rs
contracts/ft2/: Cargo.toml
contracts/ft2/src/: lib.rs
contracts/krk/: Cargo.toml
contracts/krk/src/: lib.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
scripts/: command.txt
