[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
    "contracts/ft1",
    "contracts/ft2",
    "contracts/nft",
]
exclude  = [
]